# lib-vmm

./: Cargo.toml  README.md  context7.json
src/: lib.rs
src/api/: mod.rs  provider_api.rs
src/archive/: error.rs  helpers.rs  info.rs  mod.rs
src/capabilities/: api_key_capability.rs  base.rs  builder.rs  configurable_mods.rs  form.rs  ids.rs  macros.rs  mod.rs
src/net/: https.rs  mod.rs
src/registry/: error.rs  id.rs  mod.rs  model.rs
src/runtime/: context.rs  mod.rs
src/services/: download_service.rs  mod.rs
src/tests/: capabilities.rs  context.rs  dummy.rs  form_schema.rs  mod.rs  registry.rs
src/traits/: discovery.rs  game_provider.rs  mod.rs  mod_provider.rs  provider.rs
