[package]
name = "lib-vmm"
authors = ["Ghoul"]
version = "0.1.0"
edition = "2024"
description = "Offical SDK for developing plugins for Void Mod Manager (VMM)"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["modding", "plugins", "sdk", "games", "void-mod-manager"]
repository = "https://github.com/void-mod-manager/lib-vmm"
categories = ["game-development"]

[features]
default = []
specta = ["dep:specta"]

[dependencies]
async-trait = "0.1.89"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
specta = { version = "2.0.0-rc.22", optional = true, features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
zip = "6.0.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
